Fix crash subjects

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,4 +43,6 @@
     <string name="keep_learning">Continuă să inveți</string>
     <string name="congrats_problem_complete">Felicitări, problemă rezolvată!</string>
     <string name="congrats_subject_complete">Felicitări, subiect rezolvat!</string>
+    <string name="date_complexe">Date complexe</string>
+    <string name="lec_ie_nou">Lecție nouă</string>
 </resources>
